--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                       </a>
 
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">2D</a>
+                        <a class="dropdown-item" href="./examples/TestWebAR/index.html">2D</a>
                         <a class="dropdown-item" href="./examples/UE4/vtour/tour.html">3D</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">其他互動</a>                                                
