--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="./examples/TestWebAR/index.html">webAR_01</a>
-                        <a class="dropdown-item" href="./examples/WebAR02/index.html">webAR_02</a>
+                        <a class="dropdown-item" href="./examples/video360/index.html">360_video</a>
                         <a class="dropdown-item" href="./examples/UE4/vtour/tour.html">環景圖</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">其他互動</a>                                                
